test/testdata/while/break_inside_nested_function_error.lox
while (true) {
  fun b() {
    break; // error: 'break' can only be used inside a loop
  }
  b();
  break;
}
